syntax = "proto3";

package Nebula.Services.Fragments.Authentication;
import "google/api/annotations.proto";
import "Protos/Nebula/Services/Fragments/Authentication/UserRecord.proto";

service UserInterface {
	rpc RegisterUser (RegisterUserRequest) returns (AuthenticateUserResponse) {
		option (google.api.http) = {
			post: "/api/v1/auth/register"
			body: "*"
		};
	}
	rpc AuthenticateUser(AutheticateUserRequest) returns (AuthenticateUserResponse) {
		option (google.api.http) = {
			post: "/api/v1/auth/login"
			body: "*"
		};
	}
	rpc GetOwnUser (GetOwnUserRequest) returns (GetOwnUserResponse) {
		option (google.api.http) = {
			get: "/api/v1/auth/me"
		};
	}
}

message RegisterUserRequest {
	string UserName = 1;
	string Email = 2;
	string DisplayName = 3;
	string FirstName = 4;
	string LastName = 5;
	string Password = 6;
}

message AutheticateUserRequest {
	string UserName = 1;
	string Password = 2;
}

message AuthenticateUserResponse {
	string Error = 1;
	string Token = 2;
}

message GetOwnUserRequest {}

message GetOwnUserResponse {
	string Error = 1;
	Nebula.Services.Fragments.Authentication.UserFullRecord Record = 2;
}